# mantis

./: .gitignore  README.md  pixi.toml  pyproject.toml  run.sh  submit-hala.sh  submit-l4.sh
conf/: config.yaml
conf/dataset/: caltech-256.yaml
conf/transformer/: base.yaml
models/: drop_path.py
notebooks/: caltech-dataset.ipynb  vis_grid_patches.ipynb  vis_patch_extractor.ipynb
scripts/: install_pixi.sh
src/: simple_trainer.py  simple_trainer_xla.py  train.py  train_tpu.py
src/mantis/: distributed.py  settings.py  summary.py
src/mantis/configs/: config.py  data.py  transformer.py
src/mantis/data/: datasets.py  transforms.py
src/mantis/metrics/: accuracy.py  conftest.py  test_accuracy.py
src/mantis/model/: conftest.py  patch_extractor.py  simple_model.py  test_attention.py  test_drop_path.py  test_patch_extractor.py  test_simple_model.py  transformer.py
src/mantis/model/layers/: drop_path.py  layer_scale.py  simple_head.py  test_tokenizers.py  test_transformer.py  test_transformer_layer.py  tokenizer.py
src/mantis/optimization/: warmup_cosine_scheduler.py
