[project]
authors = [{name = "Nedy88", email = "nedy88@gmail.com"}]
description = "Add a short description here"
name = "mantis"
requires-python = ">= 3.12, < 3.13"
version = "0.1.0"
dependencies = ["torchvision>=0.20.1,<0.21"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["nvidia", "pytorch", "conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
mantis = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
pytorch = ">=2.5.1,<3"
pytorch-cuda = "12.4.*"
numpy = ">=2.1.3,<3"
torchaudio = ">=2.5.1,<3"
black = ">=24.10.0,<25"
ruff = ">=0.8.0,<0.9"
pytest = ">=8.3.3,<9"

[tool.pixi.system-requirements]
cuda = "12.4"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["S101"]

[tool.ruff]
line-length = 100
