[project]
authors = [{name = "Nedy88", email = "nedy88@gmail.com"}]
description = "Add a short description here"
name = "mantis"
requires-python = ">= 3.11, < 3.12"
version = "0.1.0"
dependencies = ["torchvision>=0.19.1,<0.21", "matplotlib>=3.9.2,<4", "plotly>=5.24.1,<6"]

[project.optional-dependencies]
cuda = [
    "torch-xla-cuda-plugin @ https://storage.googleapis.com/pytorch-xla-releases/wheels/cuda/12.4/torch_xla_cuda_plugin-2.5.0-py3-none-any.whl",
    "torch-xla @ https://storage.googleapis.com/pytorch-xla-releases/wheels/cuda/12.4/torch_xla-2.5.0-cp311-cp311-manylinux_2_28_x86_64.whl"
]
tpu = [
    "torch_xla[tpu]==2.5.0",
    "libtpu-nightly @ https://storage.googleapis.com/libtpu-nightly-releases/wheels/libtpu-nightly/libtpu_nightly-0.1.dev20240916+nightly-py3-none-any.whl"
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["nvidia", "pytorch", "conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
mantis = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
pytorch = "=2.5.0"
numpy = ">=2.1.3,<3"
torchaudio = ">=2.5.0,<3"
black = ">=24.10.0,<25"
ruff = ">=0.8.0,<0.9"
pytest = ">=8.3.3,<9"
pydantic = ">=2.10.2,<3"
datasets = ">=3.1.0,<4"
jupyter = ">=1.1.1,<2"
hydra-core = ">=1.3.2,<2"
rich = ">=13.9.4,<14"
tqdm = ">=4.67.1,<5"
wandb = ">=0.18.7,<0.19"
pydantic-settings = ">=2.6.1,<3"

[tool.pixi.feature.cuda.system-requirements]
cuda = "12.4"

[tool.pixi.environments]
cuda = { features = ["cuda"], solve-group = "default" }
tpu = { features = ["tpu"], solve-group = "default" }

[tool.pixi.feature.cuda.dependencies]
cudnn = ">=9.3.0.75,<10"
cuda = ">=12.4.0,<13"
pytorch-cuda = "12.4.*"
cudatoolkit-dev = ">=11.7.0,<12"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["S101", "SLF001", "ERA001", "PGH003", "T201"]

[tool.ruff]
line-length = 100

[tool.hatch.metadata]
allow-direct-references = true

[tool.pixi.activation.env]
LD_LIBRARY_PATH = "${LD_LIBRARY_PATH}:${PIXI_PROJECT_ROOT}/.pixi/envs/${PIXI_ENVIRONMENT_NAME}/lib"
CUDA_DIR = "${PIXI_PROJECT_ROOT}/.pixi/envs/${PIXI_ENVIRONMENT_NAME}"
XLA_FLAGS = "--xla_gpu_cuda_data_dir=${PIXI_PROJECT_ROOT}/.pixi/envs/${PIXI_ENVIRONMENT_NAME}/"
